--- a/.read.md
+++ b/.read.md
@@ -35,7 +35,81 @@ importer dans layout puis déclarer dans le composant (avant return) const class
 => puis ajouter la class dans navbar className={classes.//lenomdelaclass: navbar}
 > styliser le main  en mettant minHeight 80vh
 > centrer le footer textAlign : center;
-===============================================================================
 
+=======================================================
 fixer Material Ui, pour que les styles restent apres un refresh de la page
->pqdpqdpqdpqdpqqd
+1e ETAPE
+> aller dans _app.js > ajouter 
+useEffect(()=> {
+	//supprimer css sur le server
+const jssStyles = document.querySelector('#jss-server-side');
+//si jssStryles existe
+if(jssStyles) {
+//appellerle parent et supprimer son enfant
+jssStyles.parentElement.removeChild(jssStyles);
+}	
+},[])
+
+ 2 e ETAPE
+Créer un nouveau fichier dans dossier pages : _document.js
+import Document, {Head, Html, Main, NextScript } from 'next/document';
+
+export default class MyDocument extends Document {
+ render() {
+	return (
+<Html lang = "fr">
+ <Head> </Head>
+<body>
+	<Main />
+    <NextScript/>
+
+</body>
+</Html>
+)
+}
+}
+
+MyDocument.getInitialProps = async (ctx) => {
+	const sheets = new ServerStyleSheets();//qui sera impoprté de Mui avc core
+
+	const originalRenderPage = ctx.renderPage; 	
+
+	ctx.renderPage = () => {
+(return apres save)	originalRenderPage ({
+enhanceApp: (App) => (props) => sheets.collect(<App{...props} />)
+});
+
+};
+
+//appeller et prendre  l initial props
+const inialProps = await Document.getinitialProps(ctx);
+
+return {
+...initialProps,
+styles: [
+...React.Children.toArray(initialProps.styles),sheets.getStyleElement(), //save
+]
+
+stoper npm run dev et relancer
+}
+
+};
+=================================================
+Listage des produits 
+Dans dossier utils ajouter fichier data.js
+creer variable const data = { products: [ { nom: 'Objet', etc}]}
+créer dossier images dans public 
+>ajouter images
+> index.js enlever uul li et remplacer par grid MUI
+<Grid container spacing={3}>
+</Grid>
+mapper produit à l intérieur: {data.products.map((product) => 
+	<Grid item md={4} key={product.name}</Grid>
+)}  +save puis importer data from '..utils/data'
+
+>A l interieur du dernier grid  inserer card  mUI <Card></Card>
+> puis inserer <CardActionArea> de Mui
+> puis insérer mui <CardMedia component="img" image={product.image} title={product.name}></CardImage> +save
+> Apres cardmedia , mettre  mui <CardContent> à l interieur <Typography>{product.name} </Typo> <Crctn> +save
+> apres balise fermante cardcontent  mettre mui <CardActions>=> typography => {product.price}€
+> en bas de <typo> inserer mui  <Button size="small" color="primary" => Ajouter au panier
